--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
     <title>jQuery Todo List</title>
@@ -12,7 +13,7 @@
 
     <div id="container">
         <h1>TO-DO LIST <span></span></h1>
-        <input type="text" name="" id="">
+        <input type="text" name="newTodo" id="todoInput" placeholder="Add New Todo">
         <ul>
             <li><span>X</span> Go To Potions Class</li>
             <li><span>X</span> Buy New Robes</li>
