--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
     <title>jQuery Todo List</title>
@@ -12,12 +13,12 @@
 <body>
 
     <div id="container">
-        <h1>TO-DO LIST <span></span></h1>
+        <h1>TO-DO LIST <i class="fas fa-plus"></i></h1>
         <input type="text" name="newTodo" id="todoInput" placeholder="Add New Todo">
         <ul>
-            <li><span>X</span> Go To Potions Class</li>
-            <li><span>X</span> Buy New Robes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="fas fa-trash-alt"></i></span> Go To Potions Class</li>
+            <li><span><i class="fas fa-trash-alt"></i></span> Buy New Robes</li>
+            <li><span><i class="fas fa-trash-alt"></i></span> Visit Hagrid</li>
         </ul>
     </div>
 
